# ringworld

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ringworld/: ringworld.h  ringworld.hpp
include/ringworld/console/: console.h
include/ringworld/input/: mouse.h
include/ringworld/interface/: ui_widget.h
include/ringworld/math/: math.h
include/ringworld/memory/: memory.h  pool.h  table.h
include/ringworld/multiplayer/: mode.h
include/ringworld/object/: object.h
include/ringworld/player/: player.h
include/ringworld/rasterizer/: rasterizer_dx9.h  rasterizer_geometry_group.h
include/ringworld/script/: hsc.h
include/ringworld/shader/: shader.h
include/ringworld/tag/: tag.h
include/ringworld/types/: types.h
include/ringworld/ui/: ui_widget.h
include/ringworld/units/: units.h
lua/: code_generation.cmake  env.lua  generate_headers.lua  naming.lua  tagDefinitionParser.lua  tagHeadersGenerator.lua  tag_definition_parser.lua  tag_definitions.cmake
lua/modules/: tag_definition_parser.lua
src/: main.c  ringworld.c  ringworld.cpp  ringworld.h  sources.txt  version.cmake
src/event/: event.cpp  event.h  events.cpp  events.h
src/hook/: dedicated_functions.json  game_functions.json  game_state.cpp  game_variables.json  generate_hooks.py  generate_variables.py  hook.cpp  hook.hpp  hooks.cmake  hud.cpp  server_functions.json  server_variables.json  shader_transparent_generic.S  shader_transparent_generic.cpp
src/hook/mappings/: functions.json  functions.schema.json  variables.json  variables.schema.json
src/hook/patches/: game_state.cpp  hud.S  hud.cpp  shader_transparent_generic.cpp
src/hook/scripts/: check_json_schema.py  generate_functions_hooks.py  generate_variables_bindings.py
src/impl/bitmap/: bitmap.c  bitmap.h
src/impl/cache_file/: cache_file.h
src/impl/console/: console.c  console.h
src/impl/crypto/: crc32.h  md5.c  md5.h  xtea.c  xtea.h
src/impl/cutscene/: cutscene.c  cutscene.h
src/impl/debug/: assertion.c  assertion.h  debug_symbols.c  debug_symbols.cpp  debug_symbols.h  log.c  log.h  stacktrace.c  stacktrace.h
src/impl/error/: error_code.h
src/impl/exception/: exception.c  exception.h
src/impl/font/: bitmap_font.c  bitmap_font.h  font.c  font.h  vector_font.c  vector_font.h  vector_font_file.c  vector_font_file.h
src/impl/game/: game_engine.c  game_engine.h  game_globals.c  game_globals.h  game_state.c  game_state.h  game_time.c  game_time.h
src/impl/input/: input.c  input.h  mouse.c
src/impl/interface/: first_person_weapon.c  first_person_weapon.h  hud.c  hud.h  input_event.c  input_event.h  interface.c  interface.h  loading_screen.c  loading_screen.h  numeric_countdown.h  pgcr.c  player_ui.h  scoreboard.c  scoreboard.h  ui_cursor.c  ui_cursor.h  ui_error_modal.h  ui_loading_screen.c  ui_virtual_keyboard.c  ui_virtual_keyboard.h  ui_widget.c  ui_widget.h  ui_widget_game_data_inputs.c
src/impl/light/: light.h
src/impl/main/: main_globals.c  main_globals.h
src/impl/math/: color.c  color.h  math.c  math.h  wave_functions.c  wave_functions.h
src/impl/memory/: circular_queue.h  dynamic_array.c  dynamic_array.h  dynamic_buffer.c  dynamic_buffer.h  memory.c  memory.h  pool.c  pool.h  shader_blob.h  table.c  table.h
src/impl/mouse/: mouse.c  mouse.h
src/impl/multiplayer/: mode.c  multiplayer_game_text.c  multiplayer_game_text.h  multiplayer_tags.h
src/impl/netgame/: netgame.c  netgame.h
src/impl/network/: gamespy.h  network_game.c  network_game.h  network_game_client.c  network_game_client.h  network_game_player_update.h  network_transport.h
src/impl/object/: object.c  object.h  object_base.h  object_device.h  object_item.h  object_type.c  object_type.h
src/impl/particle/: particle.h
src/impl/player/: player.c  player.h
src/impl/rasterizer/: rasterizer.c  rasterizer.h  rasterizer_bitmap_font.c  rasterizer_bitmap_font.h  rasterizer_config.c  rasterizer_config.h  rasterizer_dx9.c  rasterizer_dx9.h  rasterizer_dx9_pixel_shader_constants.h  rasterizer_dx9_render_target.c  rasterizer_dx9_render_target.h  rasterizer_dx9_shader.c  rasterizer_dx9_shader.h  rasterizer_dx9_shader_blob_file.c  rasterizer_dx9_shader_blob_file.h  rasterizer_dx9_shader_compiler.c  rasterizer_dx9_shader_compiler.h  rasterizer_dx9_shader_effect.c  rasterizer_dx9_shader_effect.h  rasterizer_dx9_texture.c  rasterizer_dx9_texture.h  rasterizer_dx9_vertex.c  rasterizer_dx9_vertex.h  rasterizer_dx9_vertex_shader.c  rasterizer_dx9_vertex_shader.h  rasterizer_dx9_vertex_shader_constants.h  rasterizer_font.c  rasterizer_font.h  rasterizer_geometry_group.c  rasterizer_geometry_group.h  rasterizer_model.c  rasterizer_model.h  rasterizer_motion_sensor.c  rasterizer_motion_sensor.h  rasterizer_render.c  rasterizer_render.h  rasterizer_screen.c  rasterizer_screen.h  rasterizer_screen_effect.c  rasterizer_screen_effect.h  (+15 more)
src/impl/rasterizer/shaders/: hud_meters.hlsl  shader_transparent_generic.hlsl  xbox_hud_meters.hlsl
src/impl/render/: render.c  render.h
src/impl/rng/: rng.c  rng.h
src/impl/saved_games/: game_variant.h  player_profile.c  player_profile.h
src/impl/scenario/: scenario.c  scenario.h
src/impl/script/: hsc.c  hsc.h
src/impl/shader/: shader.c  shader.h
src/impl/shell/: shell.c  shell.h
src/impl/tag/: tag.c  tag.h
src/impl/terminal/: termina.h  terminal.c  terminal.h
src/impl/text/: font.h  string.c  string.h  text.c  text.h  unicode_string_list.c  unicode_string_list.h
src/impl/time/: time.h
src/impl/types/: types.c  types.h
src/impl/ui/: ui_widget.c
src/impl/unit/: unit.h
src/impl/units/: units.h
src/impl/weapon/: weapon.h
src/impl/widget/: widget.h
src/ringhopper/proc/json-definitions/: actor.json  actor_variant.json  antenna.json  biped.json  bitmap.json  camera_track.json  color_table.json  continuous_damage_effect.json  contrail.json  damage_effect.json  decal.json  detail_object_collection.json  device.json  device_control.json  device_machine.json  (+68 more)
src/tool/: d3d_shader.c  effect_collection_file.c  file.c  file.h  main.c  resources.h  resources.rc  vsh_file.c
(+1 files in other folders)
